# temperature-sensor-scanner

./: README.md  config.example.yaml  pyproject.toml  requirements.txt  temperature-sensor-scanner.service  temperature-sensor-scanner.timer
.github/workflows/: publish-to-pypi.yml
temperature_sensor_scanner/: __init__.py
